First draft of entry (not compilable yet)